# vkguide_dev

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Shaders.vcxproj  Shaders.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vulkan_guide.sln
shaders/: gradient.comp
shaders/compiled/: colored_triangle.frag.spv  colored_triangle.vert.spv  colored_triangle_mesh.vert.spv  gradient.comp.spv  gradient_color.comp.spv  mesh.frag.spv  mesh.vert.spv  sky.comp.spv  tex_image.frag.spv
src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters  imgui.ini
vulkan-guide/: CMakeCache.txt  CMakeLists.txt
vulkan-guide/shaders/: input_structures.glsl
vulkan-guide/src/: camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
